# Notepad-Prac

./: CMakeLists.txt  README.md
.cache/clangd/index/: Back.cpp.00C63FDA566D9829.idx  Back.h.466163241E4FDB4E.idx  Front.cpp.45D8201DA9B9EC40.idx  Front.h.20648D65EF03AEE2.idx  main.cpp.8EFCB799235067D4.idx
Source/: Back.cpp  Back.h  Components.h  Front.cpp  Front.h  main.cpp
TechnicalSpecification/: Практикум Текстовый редактор.odt
